# aoclib

./: .gitignore  Cargo.toml  README.md  netlify.toml
src/: config.rs  input.rs  lib.rs  website.rs
src/data_structures/: linked_list.rs  mod.rs
src/geometry/: direction.rs  line.rs  map.rs  mod.rs  point.rs  tile.rs  vector3.rs  vector4.rs
src/geometry/hex/: coordinate.rs  direction.rs  mod.rs
src/geometry/map/: a_star.rs  context_conversions.rs  edge.rs  map.rs  mod.rs  render.rs  tile.rs  traversable.rs
src/numbers/: chinese_remainder.rs
tests/: parse_2015_day_23.rs  traverse_2021_day_9.rs
