[package]
name = "aoclib"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"
documentation = "https://aoclib-docs.netlify.app/aoclib/"

[dependencies]
bitvec = "1.0.1"
dirs = "5.0.0"
gif = { version = "0.12.0", optional = true }
itertools = "0.10.5"
lazy_static = "1.4.0"
num = "0.4.0"
parse-display = "0.8.0"
rand = { version = "0.8.5", optional = true }
regex = "1.7.3"
reqwest = { version = "0.11.16", features = [ "blocking", "gzip", "cookies" ] }
serde = { version = "1.0.159", features = [ "derive" ] }
serde_with = "2.3.1"
smallstr = "0.3.0"
thiserror = "1.0.40"
toml = "0.7.3"

[dev-dependencies]
derive_more = "0.99.17"

[features]
map-render = [ "gif", "rand" ]
