[package]
name = "aoclib"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"
documentation = "https://aoclib-docs.netlify.app/aoclib/"

[dependencies]
bitvec = "1.0.1"
dirs = "5.0.1"
gif = { version = "0.12.0", optional = true }
itertools = "0.12.0"
lazy_static = "1.4.0"
num = "0.4.1"
parse-display = "0.8.2"
rand = { version = "0.8.5", optional = true }
regex = "1.10.2"
reqwest = { version = "0.11.22", features = [ "blocking", "gzip", "cookies" ] }
serde = { version = "1.0.192", features = [ "derive" ] }
serde_with = "3.4.0"
smallstr = "0.3.0"
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["parsing", "formatting", "local-offset"] }
toml = "0.8.8"

[dev-dependencies]
derive_more = "0.99.17"

[features]
map-render = [ "gif", "rand" ]
