[package]
name = "aoclib"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"
documentation = "https://aoclib-docs.netlify.app/aoclib/"

[dependencies]
bitvec = "1.0.1"
dirs = "5.0.1"
gif = { version = "0.12.0", optional = true }
itertools = "0.12.1"
lazy_static = "1.5.0"
num = "0.4.3"
parse-display = "0.8.2"
rand = { version = "0.8.5", optional = true }
regex = "1.11.1"
reqwest = { version = "0.12.9", features = [ "blocking", "gzip", "cookies" ] }
serde = { version = "1.0.215", features = [ "derive" ] }
serde_with = "3.11.0"
smallstr = "0.3.0"
thiserror = "1.0.69"
time = { version = "0.3.37", features = ["parsing", "formatting", "local-offset"] }
toml = "0.8.19"

[dev-dependencies]
derive_more = "0.99.18"

[features]
map-render = [ "gif", "rand" ]
